# RustSync

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: cli.rs  config.rs  main.rs
installer/windows/: installer_windows.iss
server/: Cargo.toml
server/src/: cli.rs  config.rs  main.rs
utils/: Cargo.toml
utils/src/: file.rs  lib.rs  net.rs  packet.rs  packet2.rs
