[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
tokio = { version = "1.45.1", features = ["full"] }
walkdir = "2"
checksums = "0.9.1"
toml = "0.8.22"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
clap = { version = "4.5.39", features = ["derive"] }
