[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
checksums = "0.9.1"
clap = { version = "4.5.39", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
utils = { path = "../utils" }
